Update cifar10 title

--- a/problems/cifar10.ipynb
+++ b/problems/cifar10.ipynb
@@ -6,7 +6,7 @@
         "id": "D53KDb2hVU_X"
       },
       "source": [
-        "# Training a CNN model on CIFAR10"
+        "# Transfer learning on CIFAR10"
       ]
     },
     {
