Add cifar100 transfer learning

--- a/problems/cifar10.ipynb
+++ b/problems/cifar10.ipynb
@@ -22,7 +22,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%pip install matplotlib seaborn torch torchvision torchaudio numpy"
+        "%pip install matplotlib seaborn torch torchvision torchaudio numpy timm"
       ]
     },
     {
@@ -47,7 +47,8 @@
         "from torchvision import datasets # This is to access the CIFAR10 dataset\n",
         "from torch.utils.data import DataLoader # This is used to load the data efficiently\n",
         "import torchvision.transforms as transforms # This is used to transform data when preparing the dataset\n",
-        "import numpy as np # This is used to handle arrays of data"
+        "import numpy as np # This is used to handle arrays of data\n",
+        "import timm # This is used to load resnet model pretrained on cifar100"
       ]
     },
     {
@@ -78,7 +79,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Download the CIFAR10 dataset and create tran and test data loaders"
+        "#### Download the CIFAR10 dataset and create train and test data loaders"
       ]
     },
     {
@@ -341,7 +342,142 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Pretrained ResNet18 model"
+        "## Pretrained ResNet18 model on CIFAR100"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Load the pretrained model from torchhub."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "resnet20_cifar100 = torch.hub.load(\"chenyaofo/pytorch-cifar-models\", \"cifar100_resnet20\", pretrained=True)\n",
+        "resnet20_cifar100"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### CIFAR100 has different number of classes, but input images are compatible in shape.\n",
+        "\n",
+        "We can adapt this model by changing the last layer to fit our needs.\n",
+        "The last layer is untrained, but we can freeze the network and train only it, since the earlier model layers are capable of processing visual information from CIFAR100.\n",
+        "\n",
+        "The last fully-connected layer should receive as input a vector with the same number of features as before, but the number of output dimensions should be equal to the number of classes in CIFAR10."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<details>\n",
+        "<summary>Solution</summary>\n",
+        "    <code>\n",
+        "    num_features = resnet18.fc.in_features<br>\n",
+        "    resnet20_cifar100.fc = torch.nn.Linear(num_features, num_classes)<br>\n",
+        "    </code>\n",
+        "</details>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "num_classes = 10\n",
+        "resnet20_cifar100.fc = ...\n",
+        "resnet20_cifar100.to(device)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Freeze all layers except last."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for param in resnet20_cifar100.parameters():\n",
+        "    param.requires_grad = False\n",
+        "\n",
+        "resnet20_cifar100.fc.weight.requires_grad = True\n",
+        "resnet20_cifar100.fc.bias.requires_grad = True\n",
+        "\n",
+        "resnet20_cifar100.conv1.weight.requires_grad, resnet20_cifar100.fc.weight.requires_grad"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test(resnet20_cifar100)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Prepare the training objects."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "learning_rate = 0.001\n",
+        "\n",
+        "loss_func = torch.nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(resnet20_cifar100.parameters(), lr=learning_rate)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Train and test (only the last layer is trained)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train(2, resnet20_cifar100, loss_func, optimizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test(resnet20_cifar100)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Pretrained ResNet18 model on ImageNet"
       ]
     },
     {
