--- a/cnn_3d.ipynb
+++ b/cnn_3d.ipynb
@@ -11,7 +11,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Install dependencies"
+        "#### Install dependencies."
       ]
     },
     {
@@ -87,14 +87,17 @@
         }
       ],
       "source": [
-        "%pip install tensorflow[and-cuda] keras gdown"
+        "# Use this to install all dependencies on the local machine.\n",
+        "# This is not needed for running on Google Colab.\n",
+        "\n",
+        "# %pip install tensorflow[and-cuda] keras gdown"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Prepare imports"
+        "#### Prepare imports."
       ]
     },
     {
@@ -120,7 +123,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Prepare paths of the data and models"
+        "#### Prepare paths of the data and models."
       ]
     },
     {
@@ -141,7 +144,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Download the 3D MNIST dataset and the pretrained model files"
+        "#### Download the 3D MNIST dataset and the pretrained model files."
       ]
     },
     {
@@ -193,7 +196,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Model configuration"
+        "#### Model configuration."
       ]
     },
     {
@@ -216,7 +219,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Helper functions"
+        "#### Helper functions."
       ]
     },
     {
@@ -248,7 +251,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Load the dataset from the downloaded data file"
+        "#### Load the dataset from the downloaded data file."
       ]
     },
     {
@@ -284,7 +287,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Create the model\n",
+        "#### Create the model.\n",
         "\n",
         "Use model.add function to add the following layers:\n",
         "\n",
@@ -377,7 +380,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Train the model"
+        "#### Train the model."
       ]
     },
     {
@@ -473,7 +476,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Load the pretrained model weights into a separate model"
+        "#### Load the pretrained model weights into a separate model."
       ]
     },
     {
@@ -522,7 +525,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Test the models"
+        "#### Test the models."
       ]
     },
     {
@@ -551,7 +554,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Plot losses"
+        "#### Plot losses."
       ]
     },
     {
@@ -606,7 +609,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.19"
+      "version": "3.8.-1"
     }
   },
   "nbformat": 4,
