--- a/problems/cnn_3d.ipynb
+++ b/problems/cnn_3d.ipynb
@@ -20,7 +20,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%pip install tensorflow[and-cuda] keras gdown"
+        "# Use this to install all dependencies on the local machine.\n",
+        "# This is not needed for running on Google Colab.\n",
+        "\n",
+        "# %pip install tensorflow[and-cuda] keras gdown"
       ]
     },
     {
