--- a/problems/cifar10.ipynb
+++ b/problems/cifar10.ipynb
@@ -342,7 +342,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Pretrained ResNet18 model on CIFAR100"
+        "## Pretrained ResNet20 model on CIFAR100"
       ]
     },
     {
@@ -369,7 +369,7 @@
         "#### CIFAR100 has different number of classes, but input images are compatible in shape.\n",
         "\n",
         "We can adapt this model by changing the last layer to fit our needs.\n",
-        "The last layer is untrained, but we can freeze the network and train only it, since the earlier model layers are capable of processing visual information from CIFAR100.\n",
+        "The last layer is untrained, but we can freeze the network and train only that layer, since the earlier model layers are capable of processing visual information from CIFAR100.\n",
         "\n",
         "The last fully-connected layer should receive as input a vector with the same number of features as before, but the number of output dimensions should be equal to the number of classes in CIFAR10."
       ]
@@ -381,7 +381,7 @@
         "<details>\n",
         "<summary>Solution</summary>\n",
         "    <code>\n",
-        "    num_features = resnet18.fc.in_features<br>\n",
+        "    num_features = resnet20_cifar100.fc.in_features<br>\n",
         "    resnet20_cifar100.fc = torch.nn.Linear(num_features, num_classes)<br>\n",
         "    </code>\n",
         "</details>"
@@ -409,7 +409,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(False, True)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "for param in resnet20_cifar100.parameters():\n",
         "    param.requires_grad = False\n",
@@ -417,7 +427,15 @@
         "resnet20_cifar100.fc.weight.requires_grad = True\n",
         "resnet20_cifar100.fc.bias.requires_grad = True\n",
         "\n",
+        "# Check that the first layer is frozen and the last layer is not\n",
         "resnet20_cifar100.conv1.weight.requires_grad, resnet20_cifar100.fc.weight.requires_grad"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Test the untrained model"
       ]
     },
     {
